Fixed spacing for front page.

--- a/AppleJuice/src/main/resources/public/css/Styling.css
+++ b/AppleJuice/src/main/resources/public/css/Styling.css
@@ -3,7 +3,7 @@ h1 {
     font-style: normal;
     font-size: 36pt;
     color: #707070;
-    padding: 24px;
+    padding-left: 24px;
     text-align: left;
 }
 
@@ -12,8 +12,10 @@ h3 {
     font-style: normal;
     font-size: 30pt;
     color: #707070;
-    padding: 24px;
+    padding-left: 24px;
+    padding-top: 32px;
     text-align: left;
+    margin: 0;
 }
 
 h4 {
@@ -31,7 +33,8 @@ h4 {
     font-style: normal;
     font-size: 24pt;
     color: #707070;
-    padding: 24px;
+    padding-left: 24px;
+    padding-bottom: 12px;
     text-align: left;
     display: inline-block;
 }
